deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: northbound
  labels:
    name: northbound
    environment: production
